# mdf4-rs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  setup-git-hooks.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  mdf4-rs.yml
benches/: index_benchmark.rs
examples/: append_capture.rs  can_logging.rs  cut_file.rs  ethernet_logging.rs  flexray_logging.rs  index_operations.rs  lin_logging.rs  merge_files.rs  no_std_write.rs  read_file.rs  write_file.rs
src/: bus_logging.rs  channel.rs  channel_group.rs  cut.rs  error.rs  index.rs  lib.rs  mdf.rs  merge.rs  types.rs
src/blocks/: attachment_block.rs  channel_block.rs  channel_group_block.rs  common.rs  data_block.rs  data_group_block.rs  data_list_block.rs  dz_block.rs  event_block.rs  file_history_block.rs  header_block.rs  hl_block.rs  identification_block.rs  metadata_block.rs  mod.rs  signal_data_block.rs  source_block.rs  text_block.rs
src/blocks/attachment_block/: attachment_flags.rs
src/blocks/common/: block_header.rs  block_parse.rs  data_type.rs
src/blocks/conversion/: base.rs  bitfield.rs  formula.rs  linear.rs  logic.rs  mod.rs  simple_test.rs  table_lookup.rs  test_deep_chains.rs  text.rs  types.rs
src/blocks/dz_block/: dz_compression_type.rs
src/blocks/event_block/: event_cause.rs  event_range_type.rs  event_sync_type.rs  event_type.rs
src/blocks/source_block/: bus_type.rs  source_type.rs
src/bus_logging/: bus_frame.rs  bus_logger_config.rs  bus_logger_stats.rs  timestamped_frame.rs
src/can/: dbc_compat.rs  dbc_overlay.rs  fd.rs  mod.rs  raw_logger.rs  timestamped_frame.rs
src/can/dbc_compat/: message_info.rs  signal_info.rs
src/can/dbc_logger/: builder.rs  channel_ids.rs  message_buffer.rs  mod.rs  multiplex_info.rs
src/can/dbc_logger/builder/: can_dbc_logger_config.rs
src/can/dbc_overlay/: asam_can_group.rs  decoded_frame.rs  overlay_statistics.rs  signal_value.rs
src/can/fd/: fd_flags.rs  simple_fd_frame.rs
src/can/raw_logger/: frame_type.rs  raw_frame.rs
src/channel/: channel_values_iter.rs
src/ethernet/: frame.rs  mod.rs  raw_logger.rs
src/ethernet/frame/: ethernet_flags.rs  mac_address.rs
src/ethernet/raw_logger/: frame_size.rs  raw_eth_frame.rs
src/flexray/: frame.rs  mod.rs  raw_logger.rs
src/flexray/frame/: flex_ray_channel.rs  flex_ray_flags.rs
src/index/: _http_range_reader_example.rs  buffered_range_reader.rs  byte_range_reader.rs  data_block_info.rs  file_range_reader.rs  indexed_channel.rs  indexed_channel_group.rs
src/lin/: frame.rs  mod.rs  raw_logger.rs
src/lin/frame/: checksum_type.rs  lin_flags.rs  schedule_entry_type.rs
src/merge/: channel_meta.rs  group_meta.rs  merged_group.rs
src/parsing/: decoder.rs  mdf_file.rs  mod.rs  raw_channel.rs  raw_channel_group.rs  raw_data_group.rs  source_info.rs
src/parsing/raw_data_group/: data_block_data.rs  resolved_data_block.rs
src/writer/: data.rs  init.rs  io.rs  mod.rs  open_data_block.rs  streaming.rs  traits.rs
src/writer/streaming/: flush_policy.rs  flush_state.rs
src/writer/traits/: vec_writer.rs
tests/: api.rs  blocks.rs  data_files.rs  enhanced_index_conversions.rs  index.rs  merge.rs  test_invalidation_bits.rs
tests/can_integration/: asam_format.rs  dbc_logger.rs  main.rs
tests/data/: 29-bit-obd2.MF4  29-bit-wwh-obd.MF4  sample_with_hl.mf4
