[package]
name = "mdf4-rs"
version = "0.3.3"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/mdf4-rs"
homepage = "https://sigmatactical.org"
rust-version = "1.97.0"
readme = "README.md"
description = "mdf4-rs is a Rust library for working with Measurement Data Format (ASAM MDF4) files."
documentation = "https://docs.rs/mdf4-rs"
keywords = ["mdf4", "can", "dbc", "automotive", "no_std"]
categories = ["parsing", "embedded"]
exclude = [".github/", "examples/", "tests/", "benches/"]

[features]
default = ["std", "can", "dbc"]
std = ["alloc", "serde", "serde_json", "dbc-rs?/std"]
alloc = []
serde = ["dep:serde"]
can = ["dep:embedded-can"]
dbc = ["dep:dbc-rs", "alloc"]
compression = ["dep:miniz_oxide", "alloc"]

[dependencies]

[dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive", "alloc"]
optional = true

[dependencies.serde_json]
version = "1.0.150"
optional = true

[dependencies.embedded-can]
version = "0.4.1"
optional = true

[dependencies.dbc-rs]
version = "0.7.1"
default-features = false
features = ["alloc"]
optional = true

[dependencies.miniz_oxide]
version = "0.9.1"
default-features = false
features = ["with-alloc"]
optional = true

[dev-dependencies]

[dev-dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dev-dependencies.embedded-can]
version = "0.4.1"

[dev-dependencies.dbc-rs]
version = "0.7.1"
default-features = false
features = ["std"]

[dev-dependencies.miniz_oxide]
version = "0.9.1"

[[bench]]
name = "index_benchmark"
harness = false

[lints.clippy]
collapsible_if = "allow"
uninlined_format_args = "allow"
